@@ -1,5 +1,7 @@
 * 2018.06.07 - [FGG] fixing GCC stdlib++ detection on Windows 
                (see https://github.com/BVLC/caffe/issues/5631#issuecomment-395323054)
+             - [FGG] automatically generate _CYGWIN for _BIN,_LIB,_INCLUDE paths 
+                     on Windows (useful to build Caffe)
 
 * 2018.06.01 - [FGG] added support for os:android26* android27* and android28*
                      improved detection of correct Android NDK GCC
